# n8n-hitl-email-classification

./: Dockerfile  Email_classification_v2.json  GITHUB_SETUP.md  HOW_TO_RUN.md  README.md  RUNNING_AFTER_KEDRO.md  app.py  classifier.py  docker-compose.yml  pyproject.toml  requirements.txt  run_app.sh  run_classifier.sh
conf/base/: catalog.yml  parameters.yml
data/01_raw/: n8n-classifier-tracker.csv
src/email_classification/: __init__.py  __main__.py  api.py  pipeline_registry.py  settings.py
src/email_classification.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/email_classification/pipelines/: __init__.py
src/email_classification/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/email_classification/pipelines/training/: __init__.py  nodes.py  pipeline.py
