[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "email_classification"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.3.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "transformers>=5.5.4",
    "torch>=2.11.0",
    "kedro-viz>=12.3.0",
    "datasets>=4.8.4",
    "joblib>=1.5.3",
    "accelerate>=1.13.0",
]

[project.scripts]
email-classification = "email_classification.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.setuptools.dynamic.version]
attr = "email_classification.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "email_classification"
project_name = "email-classification"
kedro_init_version = "1.3.1"
tools = "['Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/email_classification -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.kedro_telemetry]
project_id = "d86b1ac2ea18410ea6257a26355515ba"
